<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/resultsFragment">

    <fragment
        android:id="@+id/resultsFragment"
        android:name="com.kelvinwatson.tectonicshiftearthquakemonitor.uicontrollers.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.kelvinwatson.tectonicshiftearthquakemonitor.uicontrollers.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.kelvinwatson.tectonicshiftearthquakemonitor.uicontrollers.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>