<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.kelvinwatson.tectonicshiftearthquakemonitor.viewmodel.EarthquakesViewModel.ViewState" />

        <variable
            name="itemClickListener"
            type="com.kelvinwatson.tectonicshiftearthquakemonitor.uicontrollers.ItemClickListener" />

        <variable
            name="viewModel"
            type="com.kelvinwatson.tectonicshiftearthquakemonitor.viewmodel.EarthquakesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uicontrollers.ResultsFragment">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/header_results"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Showing earthquakes at..." />

        <TextView
            android:id="@+id/text_subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingHorizontal="@dimen/activity_vertical_margin"
            android:text="@{String.format(@string/header_coordinates, viewModel.north, viewModel.east, viewModel.south, viewModel.west)}"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header"
            tools:text="Showing earthquakes at..." />
        <!-- ready view -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_results"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/activity_vertical_margin"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_subheader" />

        <!-- empty view -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{ViewState.EMPTY == viewModel.viewState ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/results_empty" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reload"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> itemClickListener.onItemClick(view, viewModel)}"
                android:text="@string/reload"
                android:textAppearance="?attr/textAppearanceButton" />
        </LinearLayout>

        <!-- loading view -->
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{ViewState.LOADING == viewModel.viewState ? View.VISIBLE : View.GONE, default=visible}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>